--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-streamlit==1.37.1
-pymupdf==1.24.9
-opencv-python-headless==4.10.0.84
-numpy==1.26.4
-Pillow==10.4.0
-python-pptx==0.6.23
+streamlit
+pymupdf
+opencv-python-headless
+numpy<2.0
+Pillow
+python-pptx
